# lad

./: .gitignore  PRESENTATION_QA.md  README.md  RESEARCH_PLAN.md  pyproject.toml
docs/: README.md
lad/: __init__.py  baselines.py  cohorts.py  cost.py  eval_base.py  grpo_train.py  gsm8k.py  mech.py  metric.py  predictive.py  reliability.py  rollouts.py  validate.py
poster/: index.html
results/: demo.html  synth_validation.txt
scripts/: analyze.py  build_figures.py  causal_select.py  cohort_order.py  compute_all_metrics.py  devbox_resume.sh  finish_paper.sh  iterate.py  make_paper.py  precompute.py  probe_and_launch.sh  run_expanded.sh  run_full.sh  run_ordered.sh  run_waves.sh  status.sh  synth_validate.py
tests/: make_fixture.py  test_mech.py  test_pipeline.py
web/: index.html
