[project]
name = "lad"
version = "0.1.0"
description = "LAD — Learnable Advantage Density: a cheap, training-free cohort metric that predicts post-RL (GRPO) accuracy lift."
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "scipy",
    "scikit-learn",
    "matplotlib",
    "pandas",
    "datasets",
    "transformers",
    "trl",
    "peft",
    "accelerate",
    "sentence-transformers",
    # torch + vllm are installed separately against the cu128 index on the GB200 box:
    #   uv pip install torch --index-url https://download.pytorch.org/whl/cu128
    #   uv pip install vllm
]

[tool.setuptools.packages.find]
include = ["lad*"]
